--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,29 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyB874gEPQquAFchX7kYGSA0TGPWEGj5ecs",
+    authDomain: "edusphere-f6db2.firebaseapp.com",
+    projectId: "edusphere-f6db2",
+    storageBucket: "edusphere-f6db2.firebasestorage.app",
+    messagingSenderId: "265992674926",
+    appId: "1:265992674926:web:f9539c24b97c19d2ca507f",
+    measurementId: "G-ZL0B7XEJVT"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
